kubernetes/prod/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iuticket-backend
  namespace: iuticket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iuticket-backend
  template:
    metadata:
      labels:
        app: iuticket-backend
    spec:
      containers:
      - name: iuticket-backend
        image: dominikgubrynowicz/iuticket-app:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "2Gi"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: iuticket-backend-service
  namespace: iuticket
spec:
  selector:
    app: iuticket-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
