kubernetes/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iuticket-ingress
  namespace: iuticket
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: iuticket.gubrynowicz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iuticket-frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: iuticket-backend-service
            port:
              number: 8080
  tls:
  - hosts:
    - iuticket.gubrynowicz.com
    secretName: iuticket-tls-secret
